# riptide

./: .gitignore  flake.nix  pyproject.toml
.github/workflows/: build-cache.yml  ci.yml  update-inputs.yml
docs/: config.example.toml  listen.md  templating.md
examples/: create_api_session.py  show_templating_with_track.py  track_templating.py
modules/: README.md  riptide-home.nix
nix/: INTEGRATION.md  README.md  package.nix  test-build.sh
riptide/cli/: __init__.py  app.py  config.py  const.py  ctx.py
riptide/cli/commands/: __init__.py  auth.py  export.py  list.py  listen.py
riptide/cli/commands/download/: __init__.py  downloader.py
riptide/cli/commands/subcommands/: fav.py  url.py
riptide/cli/utils/: download.py  downloader.py
riptide/cli/utils/auth/: core.py
riptide/core/api/models/: resources.py
riptide/core/auth/: api.py  client.py
riptide/core/metadata/: __init__.py  track.py  video.py
riptide/core/utils/: const.py  download.py  format.py  m3u.py  parse.py
skiff/: background.js  manifest.json  options.html  options.js
